# helloworld

./: .gitignore  README.md
C/GLib/testGVfs/: CMakeLists.txt
C/Gtk/testProperty/: CMakeLists.txt
C/Std/: fs_usage.c
CMake/: LISTS.md
CMake/CMakeExamples/01-basic/C-static-library/: CMakeLists.txt
CMake/CMakeExamples/01-basic/D-shared-library/: CMakeLists.txt
CMake/CMakeExamples/01-basic/D-shared-library/src/: Hello.cpp
CMake/CMakeExamples/01-basic/E-installing/: CMakeLists.txt
CMake/CMakeExamples/01-basic/E-installing/include/installing/: Hello.h
CMake/CMakeExamples/01-basic/E-installing/src/: Hello.cpp
CMake/CMakeExamples/01-basic/F-build-type/: CMakeLists.txt  main.cpp
CMake/CMakeExamples/01-basic/L-cpp-standard/i-common-method/: CMakeLists.txt  main.cpp
CMake/CMakeExamples/03-code-generation/configure-files/: CMakeLists.txt  path.h.in  ver.h.in
CMake/CMakeExamples/04-static-analysis/clang-format/: CMakeLists.txt
CMake/CMakeExamples/04-static-analysis/clang-format/cmake/modules/: clang-format.cmake
CMake/CMakeExamples/04-static-analysis/clang-format/cmake/scripts/: clang-format-check-changed.py
CMake/CMakeExamples/04-static-analysis/clang-format/subproject1/: CMakeLists.txt  main1.cpp
CMake/CMakeExamples/04-static-analysis/clang-format/subproject2/: CMakeLists.txt  main2.cpp
CMake/CMakeExamples/04-static-analysis/cppcheck/: CMakeLists.txt  run_test.sh
CMake/CMakeExamples/04-static-analysis/cppcheck/cmake/: analysis.cmake
CMake/CMakeExamples/04-static-analysis/cppcheck/cmake/modules/: FindCppCheck.cmake
CMake/CMakeExamples/04-static-analysis/cppcheck/subproject1/: CMakeLists.txt
CMake/CMakeExamples/05-unit-testing/boost/: CMakeLists.txt  Palindrome.cpp  Palindrome.h  Reverse.cpp  Reverse.h  main.cpp  unit_tests.cpp
CMake/CMakeExamples/06-installer/deb/: CMakeLists.txt  cmake-examples.conf
CMake/CMakeExamples/06-installer/deb/src/: Hello.cpp
CMake/CMakePractice/t2/: CMakeLists.txt  COPYRIGHT  README  runhello.sh
CMake/CMakePractice/t2/doc/: hello.txt
CMake/CMakePractice/t2/src/: CMakeLists.txt  main.cpp
CMake/HaHack/: README.md
CMake/HaHack/Demo8/: CMakeLists.txt  License.txt  config.h.in
CMake/Other/: CMake and GDB.md
CodeStyleGuide/: GoogleJSONStyleGuide.MD  README.md
CodeStyleGuide/AlloyTeam/: README.MD  check.md  css.md  html.md  javascript.md  name.md
CodeStyleGuide/GoogleCppStyleGuide/: CMakeLists.txt  CPPLINT.cfg  README.md  main.cpp
Cpp/: Sites.md
Cpp/EffectiveCpp/: Item00~02.md  Item00~10.md
Cpp/GoogleCppEducation/: CMakeLists.txt  example01-2.cpp  example01.cpp  example02-1.cpp  example02.cpp  example03.cpp  example04-1.cpp  example04-2.cpp  example04-3.cpp  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp
DataBase/mysql/: MySQL04.MD  MySQL06.MD  SQL-CODE.MD  mysql01.md  mysql02.md  mysql03.md  mysql05.md  mysql07.md  mysql08.md  mysql基本语法.MD  mysql基本语法.md  sql-code-example.md
Debian/: packaging-tutorial-note.md
Git/: GitCommand.MD  GotGit.md  GotGithub.md  README.MD  git-command.md  git-open-book-list.md  github-empty-guide.md
Go/: Golang.md  README.md
Go/OfficialTour/: 01hello.go  03packages.go  05functions.go  07named-results.go  14type-inference.go  15contants.go  20if-and-else.go  22switch.go  23defer.go  24pointers.go  25struct.go  27slice-len-cap.go  30range.go  33mutating-maps.go  37methods-pointers.go  40method-with-pointer-receivers.go  44interface-values-with-nil.go  45empty-interface.go  51exercise-go.go  54exercise-rot-reader.go  56exercise-images.go  58channels.go  60range-and-close.go  62default-selection.go  63exercise-equivalent-binary-trees.go  65exercise-web-crawler.go
Go/go-by-example/: 01hello-world.go
Go/go-start-and-practice/: README.md
Go/official-tour/: 01hello.go  02imports.go  10short-variable-declarations.go  16numeric-constants.go  17for.go  19if-with-a-short-statement.go  21exercise-loops-and-functions.go  23defer.go  24pointers.go  25struct.go  26array.go  29make-and-slices-of-slice.go  30range.go  31exercise-slices.go  33mutating-maps.go  34exercise-maps.go  35exercise-fibonacci-closure.go  36mehods.go  37methods-pointers.go  41interfaces.go  42interfaces-are-satisified-implicitly.go  43interface-values.go  44interface-values-with-nil.go  45empty-interface.go  46type-assertions.go  48stringer.go  49exercise-stringer.go  50errors.go  54exercise-rot-reader.go  56exercise-images.go  61select.go  63exercise-equivalent-binary-trees.go
Html5/: README.MD
Html5/DefinitiveGuide/: README.MD
Javascript/NodeJS/: README.MD
Javascript/PJfWD/: README.MD  manage.py
Meson/01-the-humble-beginning/: main.c
Meson/02-adding-dependencies/: main.c  meson.build
Object-C/: README.MD
Python/: effective-python.md  the-zen-of-python.md
Python/interpy/: 01args.py  02kwargs.py  03args-kwargs.py  04get-info.py  05debugger.py  06generator-function.py  07map.py  08filter.py  09reduce.py  10set.py  11everything-object.py  12def-func-in-func.py  13return-func-in-func.py  14func-as-argument.py  15your-first-decorator.py  16decorator-sample.py  17authorization.py  18logging.py  19nest-deco-in-func.py  20deco-class.py  21global-return.py  22multiple-return-values.py  23__slots_magic.py  24collections-defaultdict.py  25collections-counter.py  26collections-deque.py  27collections-namedtuple.py  28collections-and-enum.py  29enumerate.py  30introspection.py  31comprehensions.py  32exception.py  33excepiton-try-else.py  34lambda.py  35oneline.py  36for-else.py  37open-func.py  38coroutines.py  39func_caching.py  40fibonacci-python2.py  (+1 more)
Python/learn-code-the-hard-way/: INTRODUCTION.MD  README.MD  ex01.py  ex03.py  ex05.py  ex07.py  ex08.py  ex10.py  ex10_note.MD  ex11.py  ex15.py  ex16.txt  ex18.py  ex19.py  ex20.py  ex21.py  ex22.MD  ex23.MD  ex25.py  ex26.MD  ex26.py  ex27.MD  (+11 more)
ShellScript/: example.sh  sh01.sh  sh02.sh  sh03.sh  sh04.sh  sh05.sh  sh06-2.sh  sh06-3.sh  sh06.sh  sh07.sh  sh08.sh  sh09-1.sh  sh09-2.sh  sh10.sh  sh11.sh  sh12.sh  sh13.sh  sh14.sh
Vim/: README.md  vim-note-3.md  vim_note_1.MD  vim_note_2.MD  vim_note_3.MD  vim_note_4.MD
(+552 files in other folders)
