# cmake -DCMAKE_INSTALL_PREFIX=/tmp/t2/usr ..
CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

PROJECT(t2)

MESSAGE("SOURCE PROJECT DIR IS: ${PROJECT_SOURCE_DIR}")

MESSAGE("BINARY PROJECT DIR IS: ${PROJECT_BINARY_DIR}")

ADD_SUBDIRECTORY(src bin)

INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/t2)

INSTALL(PROGRAMS runhello.sh DESTINATION bin)

INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)
